Example.java
/* Example.java */
/* Generated By:JavaCC: Do not edit this line. Example.java */
import java.io.FileReader;
import java.io.FileNotFoundException;

public class Example implements ExampleConstants {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    if (args.length > 0) {
        try {
            FileReader fileReader = new FileReader(args[0]);
            Example parser = new Example(fileReader);
            parser.FormaGeral();
        } catch (FileNotFoundException e) {
        }
    } else {
        Example parser = new Example(System.in);
        parser.FormaGeral();
    }
  }

// Forma geral de um programa
  static final public void FormaGeral() throws ParseException {Token t;
    t = jj_consume_token(DO);
    jj_consume_token(THIS);
    jj_consume_token(ID);
    jj_consume_token(OBRACKETS);
    jj_consume_token(CBRACKETS);
    Enumerado();
    VariavelEConstante();
    jj_consume_token(BODY);
    jj_consume_token(OBRACKETS);
    Comandos();
    jj_consume_token(CBRACKETS);
    if (jj_2_2(2)) {
      jj_consume_token(DESCRIPTION);
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(ID);
      }
    } else {
      ;
    }
    jj_consume_token(0);
mostrarTokens(t);
}

// Forma geral de um enumerado
  static final public void Enumerado() throws ParseException {Token t;
    t = jj_consume_token(DECLARATION);
    jj_consume_token(TYPE);
    jj_consume_token(OBRACKETS);
    jj_consume_token(ID);
    jj_consume_token(IS);
    jj_consume_token(OCBRACKETS);
    ListaIdentificadores();
    jj_consume_token(CCBRACKETS);
    jj_consume_token(DOT);
    jj_consume_token(CBRACKETS);
mostrarTokens(t);
}

// Forma geral da declaracao de constantes e variaveis
  static final public void VariavelEConstante() throws ParseException {
    jj_consume_token(DECLARATION);
    jj_consume_token(CONSTANT);
    jj_consume_token(AND);
    jj_consume_token(VARIABLE);
    jj_consume_token(OBRACKETS);
    if (jj_2_3(2)) {
      Constantes();
      Variaveis();
    } else if (jj_2_4(2)) {
      Variaveis();
      Constantes();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(CBRACKETS);
}

// Forma geral do comando de atribuicao
  static final public void Atribuicao() throws ParseException {
    jj_consume_token(DESIGNATE);
    jj_consume_token(THIS);
    ListaIdentificadores();
    jj_consume_token(AS);
    Expressao();
}

// Forma geral do comando de entrada de dados
  static final public void EntradaDados() throws ParseException {
    jj_consume_token(READ);
    jj_consume_token(THIS);
    jj_consume_token(OBRACKETS);
    ListaIdentificadores();
    jj_consume_token(CBRACKETS);
    jj_consume_token(DOT);
}

// Forma geral do comando de saida de dados
  static final public void SaidaDados() throws ParseException {
    jj_consume_token(WRITE);
    jj_consume_token(ALL);
    jj_consume_token(THIS);
    jj_consume_token(OBRACKETS);
    ListaIdentificadores();
    jj_consume_token(CBRACKETS);
    jj_consume_token(DOT);
}

// Forma geral do comando de selecao
  static final public void Selecao() throws ParseException {
    jj_consume_token(AVALIATE);
    jj_consume_token(THIS);
    Expressao();
    jj_consume_token(TRUE);
    jj_consume_token(RESULT);
    jj_consume_token(OBRACKETS);
    Comandos();
    jj_consume_token(CBRACKETS);
    jj_consume_token(UNTRUE);
    jj_consume_token(RESULT);
    jj_consume_token(OBRACKETS);
    Comandos();
    jj_consume_token(CBRACKETS);
    jj_consume_token(DOT);
}

// Forma geral do comando de repeticao
  static final public void Repeticao() throws ParseException {
    jj_consume_token(REPEAT);
    jj_consume_token(THIS);
    Expressao();
    jj_consume_token(OBRACKETS);
    Comandos();
    jj_consume_token(CBRACKETS);
    jj_consume_token(DOT);
}

// Formas gerais auxiliares
  static final public void Comandos() throws ParseException {
    label_2:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_6(2)) {
        SaidaDados();
      } else if (jj_2_7(2)) {
        EntradaDados();
      } else if (jj_2_8(2)) {
        Enumerado();
      } else if (jj_2_9(2)) {
        Repeticao();
      } else if (jj_2_10(2)) {
        Selecao();
      } else if (jj_2_11(2)) {
        Atribuicao();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

  static final public void Constantes() throws ParseException {
    jj_consume_token(AS);
    jj_consume_token(CONSTANT);
    label_3:
    while (true) {
      if (jj_2_12(2)) {
        ;
      } else {
        break label_3;
      }
      ListaIdentificadores();
      jj_consume_token(IS);
      jj_consume_token(ALL_TYPES);
      jj_consume_token(OEQ);
      label_4:
      while (true) {
        if (jj_2_13(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(NUM);
      }
      jj_consume_token(DOT);
    }
}

  static final public void Variaveis() throws ParseException {
    jj_consume_token(AS);
    jj_consume_token(VARIABLE);
    label_5:
    while (true) {
      if (jj_2_14(2)) {
        ;
      } else {
        break label_5;
      }
      ListaIdentificadoresVariavel();
      jj_consume_token(IS);
      jj_consume_token(ALL_TYPES);
      jj_consume_token(DOT);
    }
}

  static final public void ComentarioLinha() throws ParseException {
    jj_consume_token(SLASH);
    jj_consume_token(SLASH);
    label_6:
    while (true) {
      if (jj_2_15(2)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(ID);
    }
}

  static final public void ListaIdentificadores() throws ParseException {
    jj_consume_token(ID);
    label_7:
    while (true) {
      if (jj_2_16(2)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
    }
}

// Lista de identificadores para variavel pois devem possuir a constante numerica unitaria
// Exemplo: identificador{1}
  static final public void ListaIdentificadoresVariavel() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(OCBRACKETS);
    jj_consume_token(NUM);
    jj_consume_token(CCBRACKETS);
    label_8:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(COMMA);
      jj_consume_token(ID);
      jj_consume_token(OCBRACKETS);
      jj_consume_token(NUM);
      jj_consume_token(CCBRACKETS);
    }
}

//
  static final public 
void Expressao() throws ParseException {
    ExpressaoRelacional();
    label_9:
    while (true) {
      if (jj_2_18(2)) {
        ;
      } else {
        break label_9;
      }
      if (jj_2_19(2)) {
        jj_consume_token(AND);
      } else if (jj_2_20(2)) {
        jj_consume_token(OR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpressaoRelacional();
    }
}

  static final public void ExpressaoRelacional() throws ParseException {
    ExpressaoAritimetica();
    if (jj_2_27(2)) {
      if (jj_2_21(2)) {
        jj_consume_token(OEQ);
      } else if (jj_2_22(2)) {
        jj_consume_token(ONEQ);
      } else if (jj_2_23(2)) {
        jj_consume_token(OLT);
      } else if (jj_2_24(2)) {
        jj_consume_token(OGT);
      } else if (jj_2_25(2)) {
        jj_consume_token(OLTE);
      } else if (jj_2_26(2)) {
        jj_consume_token(OGTE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ExpressaoAritimetica();
    } else {
      ;
    }
}

  static final public void ExpressaoAritimetica() throws ParseException {
    Termos();
    label_10:
    while (true) {
      if (jj_2_28(2)) {
        ;
      } else {
        break label_10;
      }
      if (jj_2_29(2)) {
        jj_consume_token(OPLUS);
      } else if (jj_2_30(2)) {
        jj_consume_token(OMINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Termos();
    }
}

  static final public void Termos() throws ParseException {
    Fator();
    label_11:
    while (true) {
      if (jj_2_31(2)) {
        ;
      } else {
        break label_11;
      }
      if (jj_2_32(2)) {
        jj_consume_token(OMULTIPLY);
      } else if (jj_2_33(2)) {
        jj_consume_token(SLASH);
      } else if (jj_2_34(2)) {
        jj_consume_token(ODIV);
      } else if (jj_2_35(2)) {
        jj_consume_token(OMOD);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      Fator();
    }
}

  static final public void Fator() throws ParseException {
    if (jj_2_36(2)) {
      jj_consume_token(ID);
    } else if (jj_2_37(2)) {
      jj_consume_token(INT);
    } else if (jj_2_38(2)) {
      jj_consume_token(NUM);
    } else if (jj_2_39(2)) {
      jj_consume_token(REAL);
    } else if (jj_2_40(2)) {
      jj_consume_token(STRING);
    } else if (jj_2_41(2)) {
      jj_consume_token(LOGIC);
    } else if (jj_2_42(2)) {
      jj_consume_token(ONOT);
      Fator();
    } else if (jj_2_43(2)) {
      jj_consume_token(OPARENTHESES);
      Expressao();
      jj_consume_token(CPARENTHESES);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static void mostrarTokens(Token t) throws ParseException {while(t.next != null) {
            System.out.println((String.format("Linhas: %d - %d", t.beginLine, t.endLine)));
            System.out.println((String.format("Colunas: %d - %d", t.beginColumn, t.endColumn)));
            System.out.println("Lexema: " + t.image);
            System.out.println("Categoria: " + t.kind);
            System.out.println("-----------");
            t = t.next;
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_30()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_31()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_32()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_33()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_34()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_35()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_36()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_37()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_38()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_39()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_40()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_41()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_42()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_43()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_3R_Constantes_184_5_12()
 {
    if (jj_scan_token(AS)) return true;
    if (jj_scan_token(CONSTANT)) return true;
    return false;
  }

  static private boolean jj_3_41()
 {
    if (jj_scan_token(LOGIC)) return true;
    return false;
  }

  static private boolean jj_3_35()
 {
    if (jj_scan_token(OMOD)) return true;
    return false;
  }

  static private boolean jj_3_24()
 {
    if (jj_scan_token(OGT)) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_3R_SaidaDados_153_5_14()) return true;
    return false;
  }

  static private boolean jj_3_34()
 {
    if (jj_scan_token(ODIV)) return true;
    return false;
  }

  static private boolean jj_3_40()
 {
    if (jj_scan_token(STRING)) return true;
    return false;
  }

  static private boolean jj_3_23()
 {
    if (jj_scan_token(OLT)) return true;
    return false;
  }

  static private boolean jj_3R_Repeticao_170_5_17()
 {
    if (jj_scan_token(REPEAT)) return true;
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3_39()
 {
    if (jj_scan_token(REAL)) return true;
    return false;
  }

  static private boolean jj_3_33()
 {
    if (jj_scan_token(SLASH)) return true;
    return false;
  }

  static private boolean jj_3_22()
 {
    if (jj_scan_token(ONEQ)) return true;
    return false;
  }

  static private boolean jj_3R_Selecao_161_5_18()
 {
    if (jj_scan_token(AVALIATE)) return true;
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3_38()
 {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  static private boolean jj_3_17()
 {
    if (jj_scan_token(COMMA)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_11()
 {
    if (jj_3R_Atribuicao_138_5_19()) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_20()
 {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  static private boolean jj_3_30()
 {
    if (jj_scan_token(OMINUS)) return true;
    return false;
  }

  static private boolean jj_3_21()
 {
    if (jj_scan_token(OEQ)) return true;
    return false;
  }

  static private boolean jj_3R_SaidaDados_153_5_14()
 {
    if (jj_scan_token(WRITE)) return true;
    if (jj_scan_token(ALL)) return true;
    return false;
  }

  static private boolean jj_3_13()
 {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  static private boolean jj_3_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) {
    jj_scanpos = xsp;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) return true;
    }
    }
    }
    }
    }
    if (jj_3R_ExpressaoAritimetica_229_3_23()) return true;
    return false;
  }

  static private boolean jj_3_37()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3_32()
 {
    if (jj_scan_token(OMULTIPLY)) return true;
    return false;
  }

  static private boolean jj_3_19()
 {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  static private boolean jj_3_31()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    }
    if (jj_3R_Fator_239_3_25()) return true;
    return false;
  }

  static private boolean jj_3_18()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) return true;
    }
    if (jj_3R_ExpressaoRelacional_224_3_22()) return true;
    return false;
  }

  static private boolean jj_3_29()
 {
    if (jj_scan_token(OPLUS)) return true;
    return false;
  }

  static private boolean jj_3R_EntradaDados_145_4_15()
 {
    if (jj_scan_token(READ)) return true;
    if (jj_scan_token(THIS)) return true;
    return false;
  }

  static private boolean jj_3_10()
 {
    if (jj_3R_Selecao_161_5_18()) return true;
    return false;
  }

  static private boolean jj_3_28()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) return true;
    }
    if (jj_3R_Termos_234_3_24()) return true;
    return false;
  }

  static private boolean jj_3R_Fator_239_3_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_36()) {
    jj_scanpos = xsp;
    if (jj_3_37()) {
    jj_scanpos = xsp;
    if (jj_3_38()) {
    jj_scanpos = xsp;
    if (jj_3_39()) {
    jj_scanpos = xsp;
    if (jj_3_40()) {
    jj_scanpos = xsp;
    if (jj_3_41()) {
    jj_scanpos = xsp;
    if (jj_3_42()) {
    jj_scanpos = xsp;
    if (jj_3_43()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_36()
 {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_scan_token(DESCRIPTION)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_1()) { jj_scanpos = xsp; break; }
    }
    return false;
  }
